2001-06-18  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (_parse_recursively): Turn off misc warnings during
	recursion. Fix recursion bug introduced by Alisdair.

2001-06-15  Tim Jenness  <timj@jach.hawaii.edu>

	* Index.pm (verify): Turn off "void" warnings in rule verification

	* Recipe.pm (_parse_recursively): Force "real" line numbers now
	that I have woken up over #line

2001-06-12  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (orac_start_algorithm_engines): s/algorithim/algorithm/g

2001-06-04  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm: Allow for different FCFs with different times
	rather than just for different filters.

	* Core.pm (orac_process_argument_list): Fix warning when using
	-skip but no -loop

2001-05-17  Tim Jenness  <timj@jach.hawaii.edu>

	* General.pm: Add cosdeg. Move it from primitives
	(dectodms): Move dectodms from _CREATE_STANDARD_ (CGS4) 

2001-05-04  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm (orac_exit_normally): Realise that \a can be used for beep.

2001-05-03  Tim Jenness  <timj@jach.hawaii.edu>

	* Xorac/Process.pm (xorac_start_process): Support changes to Core

	* Core.pm (orac_process_argument_list): Rejig so that it is
	simpler and handles "-skip -loop wait"
	(orac_print_configuration): Handle ORAC_ARGS
	(orac_calib_override): Handle array of cal options

2001-04-30  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame.pm: Tweak Michelle header translation 

2001-04-27  Tim Jenness  <timj@jach.hawaii.edu>

	* Group/UFTI.pm (calc_orac_headers): Inherit from ORAC::Group::UKIRT

	* Group/IRCAM.pm (calc_orac_headers): Inherit from ORAC::Group::UKIRT

2001-04-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Group.pm: Add subgrp(s) with uhdr check

	* Frame.pm (template): Fix bug in base class implementation

	* General.pm: Pod tidy

	* Msg/Task/ADAMShell.pm: Fix unrecognized escapes

	* Frame/UFTI.pm (template): Fix "my" masking

	* Frame/MichTemp.pm (template): Fix "my" masking
