@@ -2,6 +2,7 @@
 
 	* Recipe.pm (_parse_recursively): Turn off misc warnings during
 	recursion. Fix recursion bug introduced by Alisdair.
+	(_add_code_to_recipe): Try to stop warnings with commented out ORAC_STATUS
 
 2001-06-15  Tim Jenness  <timj@jach.hawaii.edu>
 
